--- a/src/web/templates/base.html
+++ b/src/web/templates/base.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Pawikan Sentinel{% endblock %}</title>
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap" rel="stylesheet">
     <!-- Local CSS -->
     <link rel="stylesheet" href="/static/css/tailwind.css">
     <link rel="stylesheet" href="/static/css/fontawesome.all.min.css">
-    <link rel="stylesheet" href="/static/css/host-grotesk.css">
     <link rel="stylesheet" href="/static/css/style.css">
 
     <!-- Local JS -->
